--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,7 +545,7 @@ ul.dropdown-menu li {
 }
 
 .slider {
-  background: url("/assets/img/16.jpg") no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url("/assets/img/16.jpg") no-repeat;
   background-size: cover;
   background-position: 10% 0%;
   padding: 100px 0;
