--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,17 +535,17 @@ ul.dropdown-menu li {
 }
 
 .bg-1 {
-  background: url("/assets/img/11.jpg") no-repeat 50% 50%;
+  background: url("../../assets/img/11.jpg") no-repeat 50% 50%;
   background-size: cover;
 }
 
 .bg-2 {
-  background: url("/assets/img/home-5.jpg");
+  background: url("../../assets/img/home-5.jpg");
   background-size: cover;
 }
 
 .slider {
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url("/assets/img/16.jpg") no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url("../../assets/img/16.jpg") no-repeat;
   background-size: cover;
   background-position: 10% 0%;
   padding: 100px 0;
@@ -756,7 +756,7 @@ ul.dropdown-menu li {
   content: "";
   left: 0px;
   top: 0px;
-  background: url("/assets/img/image-5.jpg") no-repeat;
+  background: url("../../assets/img/image-5.jpg") no-repeat;
   background-size: cover;
   width: 60%;
   height: 100%;
@@ -830,7 +830,7 @@ ul.dropdown-menu li {
   top: 0px;
   width: 100%;
   height: 70%;
-  background: url("/assets/img/banner.jpg") no-repeat;
+  background: url("../../assets/img/banner.jpg") no-repeat;
   background-size: cover;
 }
 
@@ -855,7 +855,7 @@ ul.dropdown-menu li {
 }
 
 .bg-counter {
-  background: url("/assets/img/11.jpg") no-repeat;
+  background: url("../../assets/img/11.jpg") no-repeat;
   background-size: cover;
 }
 
@@ -1044,7 +1044,7 @@ ul.dropdown-menu li {
 }
 
 .cta-block {
-  background: url("/assets/img/11.jpg") fixed 50% 50%;
+  background: url("../../assets/img/11.jpg") fixed 50% 50%;
   background-size: cover;
   padding: 120px 0px;
 }
